<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Home -->
    <string name="home_title">Open Launcher</string>
    <string name="show_all_apps">All</string>
    <string name="notifications">Notifications</string>
    <string name="bookmarks">Browser Bookmarks</string>
    <string name="browser_history">Browser History</string>
    <string name="all_apps">All Apps</string>
    <string name="spotlight_web_apps">Spotlight Web Apps</string>
    <string name="live_tv">Live TV</string>

    <!-- Home Menus -->
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_system_settings">System Settings</string>
    <string name="menu_add_row">Add Row</string>
    <string name="menu_add_app">Add App</string>
    <string name="menu_add_spotlight_web_app">Add Spotlight Web App</string>
    <string name="menu_add_browser_bookmark">Add Browser Bookmark</string>
    <string name="menu_delete_item">Delete Item</string>
    <string name="menu_delete_row">Delete Row</string>
    <string name="menu_uninstall_app">Uninstall App</string>
    <string name="menu_move_item">Move Item</string>
    <string name="menu_move_item_instuctions">Use the left and right arrow buttons to move and press OK to select the new position.</string>
    <string name="menu_change_row_order">Change Row Order</string>
    <string name="menu_change_row_order_done">Done</string>
    <string name="menu_change_row_order_instructions">Click on the row name to select, then move up or down and click again to place in the new position:</string>
    <string name="menu_add_widget">Add Widget</string>
    <string name="menu_change_row_name">Change Row Name</string>

    <!-- Layers -->
    <string name="layer_all_apps">ALL APPS</string>
    <string name="layer_recent_apps">RECENT APPS</string>
    <string name="layer_favorites">FAVORITES</string>
    <string name="layer_web_apps">SPOTLIGHT WEB APPS</string>
    <string name="unknown">Unknown</string>

    <!-- Message displayed when a shortcut is created by an external application -->
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name">%s</xliff:g>\" created.</string>
    <!-- Message displayed when a shortcut is created by an external application -->
    <string name="shortcut_not_installed">Shortcut \"<xliff:g id="name" example="">%s</xliff:g>\" could not be created.</string>
    <!-- Message displayed when a shortcut is uninstalled by an external application -->
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="">%s</xliff:g>\" was removed.</string>
    <!-- Message displayed when an external application attemps to create a shortcut that already exists -->
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="">%s</xliff:g>\" already exists.</string>

    <!-- About -->
    <string name="about_title">Open Launcher</string>
    <string name="about_button_privacy_policy">Privacy Policy</string>
    <string name="about_button_privacy_policy_url">http://blog.entertailion.com/privacy-policy</string>
    <string name="about_button_web">Web Site</string>
    <string name="about_button_web_url">http://openlauncher.com</string>
    <string name="about_button_more_apps">More Apps</string>
    <string name="about_button_more_apps_url">https://play.google.com/store/apps/developer?id=ENTERTAILION+LLC</string>
    <string name="about_version_title">Open Launcher %s</string>
    <string name="about_button_feedback">Feedback</string>
    <string name="about_button_feedback_email">feedback@openlauncher.com</string>
    <string name="about_copyright">\u00A9 2013 ENTERTAILION LLC. All other trademarks and copyrights are property of their respective owners. All rights reserved.</string>
    <string name="unknown_build">Unknown</string>
    <string name="about_instructions">Press the Home button to invoke the launcher. You might have to clear the existing default launcher using the system Settings app: Go to Applications/Manage applications/Home, then click the \'Clear defaults\' button.</string>
    <string name="about_instructions_vizio">Press the Home button to invoke the launcher. You might have to clear the existing default launcher using the system Settings app: Go to Applications/Manage applications/AppLauncher, then click the \'Clear defaults\' button.</string>
    <string name="about_button_uninstall">Uninstall</string>

    <!-- Introduction -->
    <string name="introduction_instruction1">Use the arrow buttons to navigate between the rows of your favorite apps.</string>
    <string name="introduction_instruction2">Use the Menu button to add your own rows and favorites.</string>
    <string name="introduction_button">OK</string>

    <!-- Preferences -->
    <string name="preferences_category_general">General Settings</string>
    <string name="preferences_general_clock_title">Clock</string>
    <string name="preferences_general_clock_summary_checked">Show the clock</string>
    <string name="preferences_general_clock_summary_unchecked">Hide the clock</string>
    <string name="preferences_general_weather_title">Weather (USA only)</string>
    <string name="preferences_general_weather_summary_checked">Show the weather</string>
    <string name="preferences_general_weather_summary_unchecked">Hide the weather</string>
    <string name="preferences_general_livetv_title">Live TV on Startup</string>
    <string name="preferences_general_livetv_summary_checked">Launch Live TV on startup</string>
    <string name="preferences_general_livetv_summary_unchecked">Don\&apos;t launch Live TV on startup</string>
    <string name="preferences_category_rows">Rows</string>
    <string name="preferences_rows_row_name_title">Row Name</string>
    <string name="preferences_rows_row_name_summary_checked">Show the row name</string>
    <string name="preferences_rows_row_name_summary_unchecked">Hide the row name</string>
    <string name="preferences_rows_item_name_title">App Name</string>
    <string name="preferences_rows_item_name_summary_checked">Show the app name</string>
    <string name="preferences_rows_item_name_summary_unchecked">Hide the app name</string>
    <string name="preferences_general_wallpaper_title">Wallpaper</string>
    <string name="preferences_general_wallpaper_summary">Set the system wallpaper</string>

    <!-- Dialogs -->
    <string name="dialog_current_row">Current row</string>
    <string name="dialog_new_row">New row</string>
    <string name="dialog_new_row_name">Enter row name</string>
    <string name="dialog_new_row_name_alert">You must enter a name for the new row.</string>
    <string name="dialog_delete_item_message">Are you sure you want to delete the current item?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete_row_message">Are you sure you want to delete the current row?</string>
    <string name="dialog_select_row">Select the row for %s</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_channel_name_alert">You must enter a name for the channel.</string>
    <string name="dialog_row_name_title">Row Name</string>
    <string name="dialog_row_name">Enter the new name:</string>
    <string name="dialog_no_browser_history">No browser history</string>
    <string name="dialog_no_browser_bookmarks">No browser bookmarks</string>

    <!-- Rating -->
    <string name="rating_title">Rate Open Launcher</string>
    <string name="rating_message">If you enjoy using Open Launcher, please take a moment to rate it. Thanks for your support!</string>
    <string name="rating_ok">Rate App</string>
    <string name="rating_remind">Remind me later</string>
    <string name="rating_no">No, thanks</string>

    <!-- Weather -->
    <string name="day_sunday">Sun</string>
    <string name="day_monday">Mon</string>
    <string name="day_tuesday">Tue</string>
    <string name="day_wednesday">Wed</string>
    <string name="day_thursday">Thu</string>
    <string name="day_friday">Fri</string>
    <string name="day_saturday">Sat</string>
    
    <!-- Title of dialog that appears after user selects Wallpaper from menu -->
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <!-- Button label on Wallpaper Gallery screen; user selects this button to set a specific wallpaper -->
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="photos">Photos</string>
    <string name="live_wallpapers">Live Wallpapers</string>
    <string name="wallpaper_photos_instructions">To use the Photos app to set the wallpaper, view the image fullscreen and then press the Menu button.</string>
    
    <!--  Widgets -->
    <string name="gadget_error_text">Problem loading widget</string>
    
</resources>