<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="0dip"
    android:paddingRight="0dip">

    <TextView
        android:id="@+id/selectText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/about_title"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5dip"
            android:text="@string/dialog_ok"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5dip"
            android:text="@string/dialog_cancel"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>